--- a/CodSoft-main/landing page/style.css
+++ b/CodSoft-main/landing page/style.css
@@ -148,6 +148,7 @@ p {
     transition: transform 0.6s ease;
     border-radius: 10%;
     position: relative;
+    object-fit:cover ;
 }
 .crs:hover {
     transform: scale(1.05);
@@ -206,4 +207,16 @@ tr td {
 }
 button{
     padding: 5px;
+}
+.cr{
+    width: 400px;
+    height: 300px;
+    transition: transform 0.6s ease;
+    border-radius: 10%;
+    position: relative;
+    object-fit:cover ;
+}
+.cr:hover {
+    transform: scale(1.05);
+    color: transparent;
 }
